# bank_operations

./: README.md  pyproject.toml
bank_operations/: utils.py
src/: main.py  operation.py  utils.py
tests/: conftest.py  test_main.py  test_operation.py  test_utils.py
