[tool.poetry]
name = "bank-operations"
version = "0.1.0"
description = ""
authors = ["Serov Ivan <serovvans@yandex.ru>"]
readme = "README.md"
packages = [{include = "bank_operations"}]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
